welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:6: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
	setCouleurBrosse()
                        ^MethodsPicture:11: error: only classes can have declared but undefined members
def faireV (c: Color);
    ^MethodsPicture:13: error: too many arguments for method point: ()Unit
	point(c: Color);
             ^MethodsPicture:14: error: too many arguments for method point: ()Unit
	avance; gauche; avance;point(c: Color);recule; droite;
                                    ^MethodsPicture:15: error: too many arguments for method point: ()Unit
	avance; point(c: Color); avance;
                     ^