welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {

def point()
{
	setCouleurBrosse()
	baisseBrosse();
	leveBrosse();
}

def faireV (c: Color);
	avance;
	point(c: Color);
	avance; gauche; avance;point(c: Color);recule; droite;
	avance; point(c: Color); avance;
}
